fix(ci): use HTTP/2 for curl calls to own domain
Prepares for Cloudflare WAF rule blocking HTTP/1.x requests.

--- a/.github/workflows/daily-tech-news.yml
+++ b/.github/workflows/daily-tech-news.yml
@@ -50,7 +50,7 @@ jobs:
           CF_ACCESS_CLIENT_SECRET: ${{ secrets.CF_ACCESS_CLIENT_SECRET }}
           AUTOMATION_API_KEY: ${{ secrets.AUTOMATION_API_KEY }}
         run: |
-          RESPONSE=$(curl -s -w "\n%{http_code}" -X POST "${SITE_URL}/api/automation/posts" \
+          RESPONSE=$(curl -s --http2 -w "\n%{http_code}" -X POST "${SITE_URL}/api/automation/posts" \
             -H "CF-Access-Client-Id: ${CF_ACCESS_CLIENT_ID}" \
             -H "CF-Access-Client-Secret: ${CF_ACCESS_CLIENT_SECRET}" \
             -H "Authorization: Bearer ${AUTOMATION_API_KEY}" \
@@ -108,7 +108,7 @@ jobs:
           CF_ACCESS_CLIENT_SECRET: ${{ secrets.CF_ACCESS_CLIENT_SECRET }}
           AUTOMATION_API_KEY: ${{ secrets.AUTOMATION_API_KEY }}
         run: |
-          curl -s -X POST \
+          curl -s --http2 -X POST \
             -H "CF-Access-Client-Id: ${CF_ACCESS_CLIENT_ID}" \
             -H "CF-Access-Client-Secret: ${CF_ACCESS_CLIENT_SECRET}" \
             -H "Authorization: Bearer ${AUTOMATION_API_KEY}" \
@@ -147,7 +147,7 @@ jobs:
           CF_ACCESS_CLIENT_SECRET: ${{ secrets.CF_ACCESS_CLIENT_SECRET }}
           AUTOMATION_API_KEY: ${{ secrets.AUTOMATION_API_KEY }}
         run: |
-          curl -s -X POST \
+          curl -s --http2 -X POST \
             -H "CF-Access-Client-Id: ${CF_ACCESS_CLIENT_ID}" \
             -H "CF-Access-Client-Secret: ${CF_ACCESS_CLIENT_SECRET}" \
             -H "Authorization: Bearer ${AUTOMATION_API_KEY}" \
@@ -186,7 +186,7 @@ jobs:
           CF_ACCESS_CLIENT_SECRET: ${{ secrets.CF_ACCESS_CLIENT_SECRET }}
           AUTOMATION_API_KEY: ${{ secrets.AUTOMATION_API_KEY }}
         run: |
-          curl -s -X POST \
+          curl -s --http2 -X POST \
             -H "CF-Access-Client-Id: ${CF_ACCESS_CLIENT_ID}" \
             -H "CF-Access-Client-Secret: ${CF_ACCESS_CLIENT_SECRET}" \
             -H "Authorization: Bearer ${AUTOMATION_API_KEY}" \
