--- a/.github/workflows/retranslate-post.yml
+++ b/.github/workflows/retranslate-post.yml
@@ -46,7 +46,7 @@ jobs:
           AUTOMATION_API_KEY: ${{ secrets.AUTOMATION_API_KEY }}
           POST_SLUG: ${{ github.event.inputs.post_slug }}
         run: |
-          RESPONSE=$(curl -s -w "\n%{http_code}" \
+          RESPONSE=$(curl -s --http2 -w "\n%{http_code}" \
             -H "CF-Access-Client-Id: ${CF_ACCESS_CLIENT_ID}" \
             -H "CF-Access-Client-Secret: ${CF_ACCESS_CLIENT_SECRET}" \
             -H "Authorization: Bearer ${AUTOMATION_API_KEY}" \
@@ -76,7 +76,7 @@ jobs:
           CF_ACCESS_CLIENT_SECRET: ${{ secrets.CF_ACCESS_CLIENT_SECRET }}
           AUTOMATION_API_KEY: ${{ secrets.AUTOMATION_API_KEY }}
         run: |
-          RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
+          RESPONSE=$(curl -s --http2 -w "\n%{http_code}" -X POST \
             -H "CF-Access-Client-Id: ${CF_ACCESS_CLIENT_ID}" \
             -H "CF-Access-Client-Secret: ${CF_ACCESS_CLIENT_SECRET}" \
             -H "Authorization: Bearer ${AUTOMATION_API_KEY}" \
