--- a/.github/workflows/sitemap-indexing.yml
+++ b/.github/workflows/sitemap-indexing.yml
@@ -52,7 +52,7 @@ jobs:
           for i in $(seq 1 $MAX_RETRIES); do
             echo "Attempt $i of $MAX_RETRIES: Fetching sitemap..."
 
-            HTTP_CODE=$(curl -s -w "%{http_code}" -o sitemap.xml "https://itguys.ro/sitemap.xml")
+            HTTP_CODE=$(curl -s --http2 -w "%{http_code}" -o sitemap.xml "https://itguys.ro/sitemap.xml")
 
             if [ "$HTTP_CODE" = "200" ] && [ -s sitemap.xml ]; then
               echo "Sitemap fetched successfully"
