fix: D1 compound SELECT limit and configurable build CPUs
- Replace UNION ALL query in stats API with batch() to avoid D1's
  compound SELECT term limit
- Make build CPU count configurable via BUILD_CPUS env var (default 1)
- Add console warnings for stats fetch failures in sidebar

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     ]
   },
   "scripts": {
-    "dev": "next build && npx @opennextjs/cloudflare build --skipBuild && wrangler dev",
+    "dev": "BUILD_CPUS=8 next build && npx @opennextjs/cloudflare build --skipBuild && wrangler dev",
     "build": "next build && npx @opennextjs/cloudflare build --skipBuild",
     "lint": "eslint .",
     "db:migrate:local": "pnpm wrangler d1 migrations apply itguys-ro --local"
