--- a/wrangler.blog-trigger.toml
+++ b/wrangler.blog-trigger.toml
@@ -3,7 +3,7 @@ main = "workers/blog-trigger/index.ts"
 compatibility_date = "2024-09-23"
 
 [triggers]
-crons = ["0 8 * * 1-5"]  # 8:00 AM UTC, Monday-Friday
+crons = ["0 17 * * 1-5"]  # 5:00 PM UTC, Monday-Friday
 
 [vars]
 # GITHUB_TOKEN is set via wrangler secret
