feat: switch blog generation from weekdays to weekly Friday roundup
Run once per week on Friday 17:00 UTC instead of every weekday.
Research now covers the most notable news of the entire week.

--- a/.github/workflows/daily-tech-news.yml
+++ b/.github/workflows/daily-tech-news.yml
@@ -1,10 +1,10 @@
-name: Daily Tech News Generator
+name: Weekly Tech News Generator
 
 on:
   workflow_dispatch:  # Triggered by Cloudflare cron worker or manual
 
 concurrency:
-  group: daily-tech-news
+  group: weekly-tech-news
   cancel-in-progress: true
 
 permissions:
